pipe 수정-모델 파일 복사

--- a/recipes/KdialectSpeech/Pipeline/run_pipe.ipynb
+++ b/recipes/KdialectSpeech/Pipeline/run_pipe.ipynb
@@ -264,6 +264,212 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "import glob\n",
+    "from pathlib import Path\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asr_dir = '/workspace/speechbrain/recipes/KdialectSpeech/ASR/Conformer'\n",
+    "run_province = 'cc'\n",
+    "train_result_dir = os.path.join(asr_dir, 'results/Conformer/5555/' + run_province + '/save')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model_dir = sorted(glob.glob(train_result_dir + '/CKPT*'), key=os.path.getmtime)[0]\n",
+    "best_model_dir = Path(best_model_dir).stem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CKPT+2022-12-28+14-16-55+00'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model = os.path.join(train_result_dir, best_model_dir, 'model.ckpt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspace/speechbrain/recipes/KdialectSpeech/ASR/Conformer/results/Conformer/5555/cc/save/CKPT+2022-12-28+14-16-55+00/model.ckpt'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "hparam_file = '../ASR/Conformer/Inference/pretrained-model-src/hyperparams.yaml'\n",
+    "pretrained_model_dir = '../ASR/Conformer/Inference/pretrained-model-src/cc'\n",
+    "os.makedirs(pretrained_model_dir, exist_ok=True)\n",
+    "# best_model = 'CKPT+2022-12-28+14-16-55+00/model.ckpt'\n",
+    "best_model_target = '../Inference/pretrained-model-src/cc/asr.ckpt'\n",
+    "# hparam_file = '../Inference/pretrained-model-src/hyperparams.yaml'\n",
+    "normalizer = '../Inference/pretrained-model-src/cc'\n",
+    "\n",
+    "hparam_file_target = os.path.join(pretrained_model_dir, 'hyperparams.yaml')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../ASR/Conformer/Inference/pretrained-model-src/cc'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pretrained_model_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../ASR/Conformer/Inference/pretrained-model-src/hyperparams.yaml'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hparam_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../ASR/Conformer/Inference/pretrained-model-src/cc/hyperparams.yaml'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shutil.copy(hparam_file, hparam_file_target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-rw-r--r-- 1 root root 3658 Dec 20 20:30 ../ASR/Conformer/Inference/pretrained-model-src/hyperparams.yaml\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -al ../ASR/Conformer/Inference/pretrained-model-src/hyperparams.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/workspace/speechbrain/recipes/KdialectSpeech/Pipeline\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shutil.copy(hparam_file, pretrained_model_dir)\n",
+    "shutil.copy(best_model, best_model_target)\n",
+    "shutil.copy(normalizer, pretrained_model_dir)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -285,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12 | packaged by conda-forge | (default, Oct 12 2021, 21:59:51) \n[GCC 9.4.0]"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4,
   "vscode": {
