--- a/recipes/KdialectSpeech/ASR/sWER/swer.ipynb
+++ b/recipes/KdialectSpeech/ASR/sWER/swer.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -165,13 +165,33 @@
        "['나', '는', '_어', '제', '', '', '_치', '킨', '을', '_먹', '었', '다']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "hyp_n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['나', '는', '_어', '제', '_양', '념', '_치', '킨', '을', '_먹', '었', '다']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref_n"
    ]
   },
   {
@@ -211,6 +231,128 @@
    "source": [
     "result = ''.join(map(str, hyp_n)).replace('_', ' ')\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_swords(ref , hyp):\n",
+    "    refs = char_tokenizer(ref)\n",
+    "    hyps = char_tokenizer(hyp)\n",
+    "    ref_nospace = ref.replace(' ', '')\n",
+    "    hyp_nospace = hyp.replace(' ', '')\n",
+    "    rlen = len(refs)\n",
+    "    hlen = len(hyps)\n",
+    "    scores =  np.zeros((hlen+1, rlen+1), dtype=np.int32)\n",
+    "\n",
+    "    # initialize, 공란을 무시하고 음절의 거리 매트릭스 만들기\n",
+    "    for r in range(rlen+1):\n",
+    "        scores[0, r] = r\n",
+    "    for h in range(1, hlen+1):\n",
+    "        scores[h, 0] = scores[h-1, 0] + 1\n",
+    "        for r in range(1, rlen+1):\n",
+    "            sub_or_cor = scores[h-1, r-1] + (0 if ref_nospace[r-1] == hyp_nospace[h-1] else 1)\n",
+    "            insert = scores[h-1, r] + 1\n",
+    "            delete = scores[h, r-1] + 1\n",
+    "            scores[h, r] = min(sub_or_cor, insert, delete)\n",
+    "\n",
+    "    # traceback and compute alignment\n",
+    "    h, r = hlen, rlen\n",
+    "    ref_norm, hyp_norm = [], []\n",
+    "\n",
+    "    while r > 0 or h > 0:\n",
+    "        if h == 0:\n",
+    "            last_r = r - 1\n",
+    "        elif r == 0:\n",
+    "            last_h = h - 1\n",
+    "            last_r = r\n",
+    "        else:\n",
+    "            sub_or_cor = scores[h-1, r-1] + (0 if ref_nospace[r-1] == hyp_nospace[h-1] else 1)\n",
+    "            insert = scores[h-1, r] + 1\n",
+    "            delete = scores[h, r-1] + 1\n",
+    "\n",
+    "            if sub_or_cor < min(insert, delete):\n",
+    "                last_h, last_r = h - 1, r - 1\n",
+    "            else:\n",
+    "                last_h, last_r = (h-1, r) if insert < delete else (h, r-1)\n",
+    "\n",
+    "            c_hyp = hyps[last_h] if last_h == h-1 else ''\n",
+    "            c_ref = refs[last_r] if last_r == r-1 else ''\n",
+    "            h, r = last_h, last_r\n",
+    "\n",
+    "            # do word-spacing normalization\n",
+    "            if c_hyp.replace('_', '') == c_ref.replace('_', ''):\n",
+    "                c_hyp = c_ref\n",
+    "\n",
+    "        ref_norm.append(c_ref)\n",
+    "        hyp_norm.append(c_hyp)\n",
+    "\n",
+    "    # ref_norm[::-1], hyp_norm[::-1]\n",
+    "    shyp = ''.join(map(str, hyp_norm[::-1])).replace('_', ' ')\n",
+    "    return shyp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'나는 어제 치킨을 먹었다'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_swords(ref, hyp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'나는 어제 양념 치킨을 먹었다'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'나는어제  치킨을먹었다'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hyp"
    ]
   },
   {
@@ -331,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12 | packaged by conda-forge | (default, Oct 12 2021, 21:59:51) \n[GCC 9.4.0]"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4,
   "vscode": {
