--- a/recipes/KdialectSpeech/eda.ipynb
+++ b/recipes/KdialectSpeech/eda.ipynb
@@ -2173,7 +2173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12 | packaged by conda-forge | (default, Oct 12 2021, 21:59:51) \n[GCC 9.4.0]"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4,
   "vscode": {
