--- a/recipes/KdialectSpeech/Prepare_data/kdialectspeech_make_manifest.ipynb
+++ b/recipes/KdialectSpeech/Prepare_data/kdialectspeech_make_manifest.ipynb
@@ -621,10 +621,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gw_manifest_file = \"/data/MTDATA/fn-2-018/sentence/gw.csv\"\n",
+    "gw_manifest_df = pd.read_csv(gw_manifest_file)\n",
+    "\n",
+    "# split total csv into train, valid, test\n",
+    "gw_manifest_train_df, gw_manifest_valid_df, gw_manifest_test_df = np.split(\n",
+    "    gw_manifest_df.sample(frac=1, random_state=7774), \n",
+    "    [int(.8*len(gw_manifest_df)), int(.9*len(gw_manifest_df))]\n",
+    ")\n",
+    "\n",
+    "gw_manifest_train_file = \"/data/MTDATA/fn-2-018/sentence/gw_train.csv\"\n",
+    "gw_manifest_train_df.to_csv(gw_manifest_train_file, index=False)\n",
+    "\n",
+    "gw_manifest_valid_file = \"/data/MTDATA/fn-2-018/sentence/gw_valid.csv\"\n",
+    "gw_manifest_valid_df.to_csv(gw_manifest_valid_file, index=False)\n",
+    "\n",
+    "gw_manifest_test_file = \"/data/MTDATA/fn-2-018/sentence/gw_test.csv\"\n",
+    "gw_manifest_test_df.to_csv(gw_manifest_test_file, index=False)"
+   ]
   },
   {
    "cell_type": "code",
@@ -818,6 +836,31 @@
     "gs_manifest_df = total_manifest_df[gs_filter]\n",
     "gs_manifest_df['province_code'] = gs_manifest_df['province_code'].replace('total','gs')\n",
     "gs_manifest_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs_manifest_file = \"/data/MTDATA/fn-2-018/sentence/gs.csv\"\n",
+    "gs_manifest_df = pd.read_csv(gs_manifest_file)\n",
+    "\n",
+    "# split total csv into train, valid, test\n",
+    "gs_manifest_train_df, gs_manifest_valid_df, gs_manifest_test_df = np.split(\n",
+    "    gs_manifest_df.sample(frac=1, random_state=7774), \n",
+    "    [int(.8*len(gs_manifest_df)), int(.9*len(gs_manifest_df))]\n",
+    ")\n",
+    "\n",
+    "gs_manifest_train_file = \"/data/MTDATA/fn-2-018/sentence/gs_train.csv\"\n",
+    "gs_manifest_train_df.to_csv(gs_manifest_train_file, index=False)\n",
+    "\n",
+    "gs_manifest_valid_file = \"/data/MTDATA/fn-2-018/sentence/gs_valid.csv\"\n",
+    "gs_manifest_valid_df.to_csv(gs_manifest_valid_file, index=False)\n",
+    "\n",
+    "gs_manifest_test_file = \"/data/MTDATA/fn-2-018/sentence/gs_test.csv\"\n",
+    "gs_manifest_test_df.to_csv(gs_manifest_test_file, index=False)"
    ]
   },
   {
@@ -1016,6 +1059,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jl_manifest_file = \"/data/MTDATA/fn-2-018/sentence/jl.csv\"\n",
+    "jl_manifest_df = pd.read_csv(jl_manifest_file)\n",
+    "\n",
+    "# split total csv into train, valid, test\n",
+    "jl_manifest_train_df, jl_manifest_valid_df, jl_manifest_test_df = np.split(\n",
+    "    jl_manifest_df.sample(frac=1, random_state=7774), \n",
+    "    [int(.8*len(jl_manifest_df)), int(.9*len(jl_manifest_df))]\n",
+    ")\n",
+    "\n",
+    "jl_manifest_train_file = \"/data/MTDATA/fn-2-018/sentence/jl_train.csv\"\n",
+    "jl_manifest_train_df.to_csv(jl_manifest_train_file, index=False)\n",
+    "\n",
+    "jl_manifest_valid_file = \"/data/MTDATA/fn-2-018/sentence/jl_valid.csv\"\n",
+    "jl_manifest_valid_df.to_csv(jl_manifest_valid_file, index=False)\n",
+    "\n",
+    "jl_manifest_test_file = \"/data/MTDATA/fn-2-018/sentence/jl_test.csv\"\n",
+    "jl_manifest_test_df.to_csv(jl_manifest_test_file, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -1210,6 +1278,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jj_manifest_file = \"/data/MTDATA/fn-2-018/sentence/jj.csv\"\n",
+    "jj_manifest_df = pd.read_csv(jj_manifest_file)\n",
+    "\n",
+    "# split total csv into train, valid, test\n",
+    "jj_manifest_train_df, jj_manifest_valid_df, jj_manifest_test_df = np.split(\n",
+    "    jj_manifest_df.sample(frac=1, random_state=7774), \n",
+    "    [int(.8*len(jj_manifest_df)), int(.9*len(jj_manifest_df))]\n",
+    ")\n",
+    "\n",
+    "jj_manifest_train_file = \"/data/MTDATA/fn-2-018/sentence/jj_train.csv\"\n",
+    "jj_manifest_train_df.to_csv(jj_manifest_train_file, index=False)\n",
+    "\n",
+    "jj_manifest_valid_file = \"/data/MTDATA/fn-2-018/sentence/jj_valid.csv\"\n",
+    "jj_manifest_valid_df.to_csv(jj_manifest_valid_file, index=False)\n",
+    "\n",
+    "jj_manifest_test_file = \"/data/MTDATA/fn-2-018/sentence/jj_test.csv\"\n",
+    "jj_manifest_test_df.to_csv(jj_manifest_test_file, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -1400,6 +1493,31 @@
     "cc_manifest_df = total_manifest_df[cc_filter]\n",
     "cc_manifest_df['province_code'] = cc_manifest_df['province_code'].replace('total','cc')\n",
     "cc_manifest_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc_manifest_file = \"/data/MTDATA/fn-2-018/sentence/cc.csv\"\n",
+    "cc_manifest_df = pd.read_csv(cc_manifest_file)\n",
+    "\n",
+    "# split total csv into train, valid, test\n",
+    "cc_manifest_train_df, cc_manifest_valid_df, cc_manifest_test_df = np.split(\n",
+    "    cc_manifest_df.sample(frac=1, random_state=7774), \n",
+    "    [int(.8*len(cc_manifest_df)), int(.9*len(cc_manifest_df))]\n",
+    ")\n",
+    "\n",
+    "cc_manifest_train_file = \"/data/MTDATA/fn-2-018/sentence/cc_train.csv\"\n",
+    "cc_manifest_train_df.to_csv(cc_manifest_train_file, index=False)\n",
+    "\n",
+    "cc_manifest_valid_file = \"/data/MTDATA/fn-2-018/sentence/cc_valid.csv\"\n",
+    "cc_manifest_valid_df.to_csv(cc_manifest_valid_file, index=False)\n",
+    "\n",
+    "cc_manifest_test_file = \"/data/MTDATA/fn-2-018/sentence/cc_test.csv\"\n",
+    "cc_manifest_test_df.to_csv(cc_manifest_test_file, index=False)"
    ]
   },
   {
