1차 제출 후 30초 이상 데이터 처리 계획 단계, 3/24 최종 수정, 6/5 커밋

--- a/recipes/KdialectSpeech/todo.txt
+++ b/recipes/KdialectSpeech/todo.txt
@@ -1,3 +1,23 @@
+2023/03/24
+참고(오디오 청크) : https://github.com/tyiannak/pyAudioAnalysis
+
+evaluation 프로세스
+
+1. 오디오 파일, 라벨 가져오기
+2. 오디오 파일 시간 체크
+    30초 이하 -> 인식 프로세스
+    30초 초과 -> 자르기
+        -> 문장 별로 자르기
+            -> 문장이 30초 이하 -> 인식 프로세스
+            -> 문장이 30초 초과 -> 자르기
+                -> 인식 프로세스
+                -> 결과 합치기
+        -> 결과 합치기
+3. 인식 결과를 라벨과 띄어쓰기 교정
+4. 비교: 에러레이트 계산
+
+
+
 2023/03/23
 사용법
 1. 데이터 준비 : 오디오 파일을 문장별로 자르고 매니페스트 파일 만들기
@@ -21,8 +41,6 @@
     province + "_train.csv # 예) gw_train.csv
     province + "_valid.csv # 예) gw_valid.csv
     province + "_test.csv # 예) gw_test.csv
-
-
 
 
 
