--- a/recipes/KdialectSpeech/202307-suppl/test_data_test.ipynb
+++ b/recipes/KdialectSpeech/202307-suppl/test_data_test.ipynb
@@ -7179,6 +7179,35 @@
    "source": [
     "data_file_name"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../kdialectspeech\")\n",
+    "from string_normalize import string_normalize\n",
+    "from time_convert import time_convert\n",
+    "from check_audio_file import check_audio_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_audio_file(\"st_set3_collectorgs32_speakergs1230_15_8.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
